Opened 9 years ago

Closed 9 years ago

#4307 closed defect (fixed)

Regression: Apple Prores no longer muxes to MKV...

Reported by: Ian Kennedy Owned by:
Priority: important Component: avformat
Version: git-master Keywords: prores mkv
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

...not sure when this change happend Build from November '14 works well.

Error: [matroska @ 00000000049800a0] Tag apch/0x68637061 incompatible with output codec id '149' (APCN)

ffmpeg.exe -y -i E:\TestMedia\TELECINE\microsoftonly_klasvandereerdenschaap_dut_dubbed_prores_pcdda.mov
-acodec pcm_s16le -ac 2 -channel_layout stereo -pix_fmt yuv422p10le
-c:v prores_ks -profile:v 3 -qscale:v 7 -vendor ap10 -vf [F1]yadif[F2];[F2]scale=960:540[F3];[F3]set
sar=1/1[F4] -map 0:0 -map 0:2 .\testref\out.mkv
ffmpeg version N-69672-g078be09 Copyright (c) 2000-2015 the FFmpeg developers

built with gcc 4.9.2 (GCC)
configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-avisynth --enable-bzlib --enable-fontconfi

g --enable-frei0r --enable-gnutls --enable-iconv --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --
enable-libfreetype --enable-libgme --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --enable-lib
opencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libopus --enable-librtmp --enable-libschroedinge
r --enable-libsoxr --enable-libspeex --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvo-aacenc --
enable-libvo-amrwbenc --enable-libvorbis --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-
libx265 --enable-libxavs --enable-libxvid --enable-lzma --enable-decklink --enable-zlib

libavutil 54. 18.100 / 54. 18.100
libavcodec 56. 21.102 / 56. 21.102
libavformat 56. 19.100 / 56. 19.100
libavdevice 56. 4.100 / 56. 4.100
libavfilter 5. 9.104 / 5. 9.104
libswscale 3. 1.101 / 3. 1.101
libswresample 1. 1.100 / 1. 1.100
libpostproc 53. 3.100 / 53. 3.100

[mov,mp4,m4a,3gp,3g2,mj2 @ 000000000456db40] sample aspect ratio already set to 93207:65536, ignoring 'pasp' atom (10000
:7031)
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'E:\TestMedia\TELECINE\microsoftonly_klasvandereerdenschaap_dut_dubbed_prores_pc
dda.mov':

Metadata:

major_brand : qt
minor_version : 537199360
compatible_brands: qt
creation_time : 2014-08-21 09:03:06
timecode : 00:59:58:00

Duration: 01:12:07.44, start: 0.000000, bitrate: 63205 kb/s

Stream #0:0(eng): Video: prores (apch / 0x68637061), yuv422p10le(bt470bg/smpte240m/bt709), 720x576, 60895 kb/s, SAR

93207:65536 DAR 466035:262144, 25 fps, 25 tbr, 2500 tbn, 2500 tbc (default)

Metadata:

rotate : -0
creation_time : 2014-08-21 09:03:06
handler_name : Apple Alias Data Handler
encoder : Apple ProRes 422 (HQ)

Side data:

displaymatrix: rotation of 0.00 degrees

Stream #0:1(eng): Data: none (tmcd / 0x64636D74) (default)
Metadata:

creation_time : 2014-08-21 09:32:46
handler_name : Apple Alias Data Handler
timecode : 00:59:58:00

Stream #0:2(eng): Audio: pcm_s24le (in24 / 0x34326E69), 48000 Hz, downmix, s32 (24 bit), 2304 kb/s (default)
Metadata:

creation_time : 2014-08-21 09:32:47
handler_name : Apple Alias Data Handler

[matroska @ 00000000049800a0] Tag apch/0x68637061 incompatible with output codec id '149' (APCN)
Output #0, matroska, to '.\testref\out.mkv':

Metadata:

major_brand : qt
minor_version : 537199360
compatible_brands: qt
timecode : 00:59:58:00
Stream #0:0(eng): Video: prores (prores_ks) (apch / 0x68637061), yuv422p10le, 960x540 [SAR 1:1 DAR 16:9], q=2-31, 20

0 kb/s, 25 fps, 25 tbn, 25 tbc (default)

Metadata:

rotate : -0
creation_time : 2014-08-21 09:03:06
handler_name : Apple Alias Data Handler
encoder : Lavc56.21.102 prores_ks

Stream #0:1(eng): Audio: pcm_s16le, 48000 Hz, stereo, s16 (24 bit), 1536 kb/s (default)
Metadata:

creation_time : 2014-08-21 09:32:47
handler_name : Apple Alias Data Handler
encoder : Lavc56.21.102 pcm_s16le

Stream mapping:

Stream #0:0 -> #0:0 (prores (native) -> prores (prores_ks))
Stream #0:2 -> #0:1 (pcm_s24le (native) -> pcm_s16le (native))

Could not write header for output file #0 (incorrect codec parameters ?): Invalid data found when processing input

Change History (2)

comment:1 by Ian Kennedy, 9 years ago

Summary: Pro Res no longer allowed in MKV...Regression: Apple Prores no longer muxes to MKV...

regression, btw. Unfortunate.

comment:2 by Carl Eugen Hoyos, 9 years ago

Priority: normalimportant
Reproduced by developer: set
Resolution: fixed
Status: newclosed
Version: unspecifiedgit-master

The described issue was reproducible with the following command line:

$ ffmpeg -f lavfi -i testsrc -vcodec prores -t 1 -profile:v 0 out.mkv

Fixed in 2e0b5f5c90a4bc1440703ba5e8bf7139ff42f367 and (future) 2.6.1 and 2.5.5.

Note: See TracTickets for help on using tickets.